@@ -1,6 +1,7 @@
 name: 'Backup and Migrate'
 description: 'Backup the Drupal database and files or migrate them to another environment.'
 package: Other
+php: 7.1
 type: module
 core_version_requirement: ^8.7.7 || ^9
 configure: backup_migrate.quick_backup
